--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -2,3 +2,8 @@ footer {
     background-color: #f0f0f0;
     padding: 20px;
 }
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+}
