--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #f0f0f0;
+    background-color:#B3B3B3;;
     padding: 20px;
 }
 
@@ -10,7 +10,8 @@ footer {
 
 .footer-headings {
     font-size: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    color: white;
 }
 
 .address,
@@ -18,6 +19,25 @@ footer {
 .services,
 .pages {
     margin-bottom: 20px;
+}
+
+.address {
+    margin-bottom: 10px;
+}
+
+.no-list-style {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+ul li {
+    margin-bottom: 5px;
 }
 
 /* Mobile-first design */
