--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,11 +1,9 @@
 footer {
-    background-color:#B3B3B3;;
-    padding: 20px;
-}
-
-.footer-container {
     display: flex;
     flex-direction: column;
+    gap: 10px; /* or whatever gap you want */
+    padding: 20px 20px 40px 20px;
+    background-color:#B3B3B3;
 }
 
 .footer-headings {
