--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -42,9 +42,10 @@ ul li {
 @media (min-width: 768px) {
 
     /* Desktop version */
-    .footer-container {
+    footer {
         flex-direction: row;
-        flex-wrap: wrap;
+        justify-content: space-evenly;
+        gap: 20px; /* or whatever gap you want */
     }
 
     .address,
