--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,14 +1,14 @@
 footer {
     display: flex;
     flex-direction: column;
-    gap: 10px; /* or whatever gap you want */
-    padding: 20px 20px 40px 20px;
+    padding: 30px 20px 40px 30px;
     background-color:#B3B3B3;
 }
 
 .footer-headings {
     font-size: 25px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     color: white;
 }
 
@@ -16,17 +16,15 @@ footer {
 .contact-details,
 .services,
 .pages {
-    margin-bottom: 20px;
+    gap: 20px;
 }
 
 .address {
-    margin-bottom: 10px;
+    gap: 10px;
 }
 
 .no-list-style {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 a {
@@ -45,13 +43,12 @@ ul li {
     footer {
         flex-direction: row;
         justify-content: space-evenly;
-        gap: 20px; /* or whatever gap you want */
     }
 
     .address,
     .contact-details,
     .services,
     .pages {
-        flex-basis: 25%;
+        justify-content: space-evenly;
     }
 }
