--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -4,3 +4,76 @@ header > nav > ul {
 	gap: 15px;
 	padding-left: 0; /* reset */
 }
+
+* {
+  border: 1px dotted black;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 2rem;
+}
+
+.navlink-text {
+  color: black;
+  text-decoration: none;
+  margin: 0 1rem;
+  font-size: 1.3rem;
+}
+
+header .nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
+}
+
+@media only screen and (max-width: 768px) {
+    header .nav-btn {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    header nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      display: flex; 
+      flex-direction: column; 
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+      background-color: #B3B3B3;
+      transition: 1s;
+      transform: translateY(-100vh)
+    }
+
+    header .responsive_nav {
+      transform: none;
+    }
+
+    nav .nav-close-btn{
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+    }
+
+    .ul-container {
+      display: flex;
+      flex-direction: column;
+    };
+
+}
+  
+
+
+
