--- a/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
+++ b/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
@@ -1,5 +1,5 @@
 .visit-us-section {
-	margin-bottom: 20px; /* adjust this for the gap to the footer */
+	margin-bottom: 30px; /* adjust this for the gap to the footer */
 }
 
 .visit-us-section > h2 {
@@ -25,13 +25,17 @@
 }
 
 .visit-us-details-subcontainer > h3 {
-	/* for Address and Contacts styling */
+	/* for custom Address and Contacts styling */
 }
 
 .visit-us-details-subcontainer > p {
 	display: flex;
 	flex-direction: column;
-	gap: 4px;
+	/* may want a gap here */
+}
+
+.visit-us-details-subcontainer > p > span {
+	font-size: inherit;
 }
 
 @media screen and (min-width: 700px) {
@@ -39,9 +43,6 @@
 		width: 90%; /* the map is flush with the right edge but i've changed it deliberately */
 		margin: 0 auto;
 		grid-template-columns: 0.3fr 0.7fr;
-		column-gap: 20px;
-	}
-
-	.visit-us-details-container {
+		/* column-gap: 20px; */
 	}
 }
