--- a/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerForm/VolunteerForm.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerForm/VolunteerForm.css
@@ -1,13 +1,13 @@
 .volunteer-form-container {
-	/* possibly need a margin-top */
 }
 
 .volunteer-form-container > h3 {
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .volunteer-form-container > p {
+	/* for gap below "Fields marked with an asterisk (*) are required */
 	margin-bottom: 10px;
 }
 
@@ -19,21 +19,19 @@
 }
 
 .volunteer-form-group {
-	display: grid;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .volunteer-form-label {
-	width: 100%; /* to fix overflow */
-	margin-bottom: 5px;
 	font-weight: 500;
 }
 
 .volunteer-form-input {
-	width: 100%; /* to fix overflow */
-	padding: 4px;
+	padding: 6px;
 	border: 1px solid hsl(0, 0%, 0%);
 	background-color: hsl(0, 6%, 90%);
-	font-size: inherit;
 }
 
 .volunteer-form-submit {
@@ -42,7 +40,6 @@
 	border: 1px solid hsl(0, 0%, 0%);
 	background-color: hsl(0, 0%, 70%);
 	color: hsl(0, 0%, 100%);
-	font-size: inherit;
 	cursor: pointer;
 }
 
