--- a/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerForm/VolunteerForm.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerForm/VolunteerForm.css
@@ -64,3 +64,22 @@
 		justify-self: end;
 	}
 }
+
+/* this could/should be in globals */
+.loading {
+	width: 19px;
+	height: 19px;
+	border: 4px solid #f3f3f3;
+	border-top: 4px solid hsl(0, 0%, 75%);
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
