--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,79 +1,133 @@
-header > nav > ul {
-	display: flex;
-	list-style: none;
-	gap: 25px;
-	padding-left: 0; /* reset */
-}
-
 /* * {
-  border: 1px dotted black;
+	border: 1px dotted black;
 } */
 
 header {
+	background-color: var(--gray80);
+}
+
+header nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #adadade9;
+	transition: 1s;
+	transform: translateY(-100vh);
+}
+
+header nav ul {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	gap: 20px;
+	list-style: none;
+	padding-left: 0; /* reset */
+}
+
+.header-subcontainer {
+	max-width: 1200px;
+	margin: 0 auto;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding: 0 20px;
 	height: 80px;
-	padding: 0 1rem;
 }
 
-nav {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+header .responsive_nav {
+	transform: none;
 }
 
-.navlink-text {
+header .navlink {
 	color: black;
 	text-decoration: none;
-	font-size: 1.3rem;
+	font-size: 18px;
+	transition: all ease-in-out 200ms;
 }
 
+header .navlink:hover {
+	color: white;
+}
+
+.navlink.active {
+	color: white;
+}
+
+.navlink-image-container {
+	display: none; /* Hide the arrow by default */
+}
+
+/* hamburger button */
 header .nav-btn {
 	padding: 5px;
 	cursor: pointer;
 	background: transparent;
 	border: none;
 	outline: none;
-	visibility: hidden;
-	opacity: 0;
 	font-size: 1.8rem;
+	display: block;
 }
 
-@media only screen and (max-width: 768px) {
-	header .nav-btn {
-		visibility: visible;
-		opacity: 1;
-	}
+/* close mobile menu button */
+nav .nav-close-btn {
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
+}
 
+.header-logo-container {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.header-logo-container h2 {
+	font-size: 16px;
+}
+
+.header-logo-image-container {
+	width: 40px;
+	height: 40px;
+}
+
+.header-logo-image-container img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+@media only screen and (min-width: 768px) {
 	header nav {
-		position: fixed;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		gap: 1.5rem;
-		background-color: #b3b3b3;
-		transition: 1s;
-		transform: translateY(-100vh);
-	}
-
-	header .responsive_nav {
+		position: relative;
+		margin-top: 15px;
+		flex-direction: row;
+		justify-content: flex-end;
+		align-items: flex-end;
+		width: auto;
+		height: auto;
+		background-color: transparent;
 		transform: none;
 	}
 
-	nav .nav-close-btn {
-		position: absolute;
-		top: 2rem;
-		right: 2rem;
+	header nav ul {
+		display: flex;
+		flex-direction: row;
 	}
 
-	.ul-container {
-		display: flex;
-		flex-direction: column;
+	header .nav-btn {
+		display: none;
+	}
+
+	.navlink.active {
+		color: black;
+	}
+
+	.navlink.active + .navlink-image-container {
+		display: block; /* Show the arrow when the navlink has the active class */
 	}
 }
