--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -10,13 +10,12 @@ header nav {
 	position: fixed;
 	top: 0;
 	left: 0;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background-color: #adadade9;
-	transition: 1s;
 	transform: translateY(-100vh);
 }
 
@@ -24,7 +23,7 @@ header nav ul {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	gap: 20px;
+	gap: 16px;
 	list-style: none;
 	padding-left: 0; /* reset */
 }
@@ -39,14 +38,10 @@ header nav ul {
 	height: 80px;
 }
 
-header .responsive_nav {
-	transform: none;
-}
-
 header .navlink {
 	color: black;
 	text-decoration: none;
-	font-size: 18px;
+	font-size: 14px;
 	transition: all ease-in-out 200ms;
 }
 
@@ -78,6 +73,15 @@ nav .nav-close-btn {
 	position: absolute;
 	top: 2rem;
 	right: 2rem;
+}
+
+.responsive_nav {
+	transform: none;
+	transition: 1s;
+}
+
+.closing {
+	transition: 1s;
 }
 
 .header-logo-container {
@@ -129,5 +133,11 @@ nav .nav-close-btn {
 
 	.navlink.active + .navlink-image-container {
 		display: block; /* Show the arrow when the navlink has the active class */
+	}
+}
+
+@media only screen and (min-width: 1024px) {
+	header .navlink {
+		font-size: 18px;
 	}
 }
