--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -4,6 +4,7 @@
 
 header {
 	background-color: var(--gray80);
+	width: 100vw;
 }
 
 header nav {
@@ -28,6 +29,11 @@ header nav ul {
 	padding-left: 0; /* reset */
 }
 
+/* disabling scrolling while mobile navbar is opened */
+body.open-nav {
+	overflow: hidden;
+}
+
 .header-subcontainer {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -38,14 +44,14 @@ header nav ul {
 	height: 80px;
 }
 
-header .navlink {
+.navlink {
 	color: black;
 	text-decoration: none;
 	font-size: 14px;
 	transition: all ease-in-out 200ms;
 }
 
-header .navlink:hover {
+.navlink:hover {
 	color: white;
 }
 
@@ -58,7 +64,7 @@ header .navlink:hover {
 }
 
 /* hamburger button */
-header .nav-btn {
+.nav-btn {
 	padding: 5px;
 	cursor: pointer;
 	background: transparent;
@@ -66,10 +72,11 @@ header .nav-btn {
 	outline: none;
 	font-size: 1.8rem;
 	display: block;
+	color: black;
 }
 
 /* close mobile menu button */
-nav .nav-close-btn {
+.nav-close-btn {
 	position: absolute;
 	top: 2rem;
 	right: 2rem;
@@ -84,11 +91,6 @@ nav .nav-close-btn {
 /* transition for closing mobile navbar */
 .closing {
 	transition: 1s;
-}
-
-/* disabling scrolling while mobile navbar is opened */
-body.open-nav {
-	overflow: hidden;
 }
 
 .header-logo-container {
@@ -130,7 +132,7 @@ body.open-nav {
 		flex-direction: row;
 	}
 
-	header .nav-btn {
+	.nav-btn {
 		display: none;
 	}
 
@@ -144,7 +146,11 @@ body.open-nav {
 }
 
 @media only screen and (min-width: 1024px) {
-	header .navlink {
+	.navlink {
 		font-size: 18px;
+	}
+
+	.header-logo-container h2 {
+		font-size: 20px;
 	}
 }
