--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -3,8 +3,10 @@ footer {
     flex-direction: column;
     gap: 20px;
     padding: 30px 10px 45px 50px;
-    background-color:hsl(0, 0%, 70%);
+    background-color: hsl(0, 0%, 70%);
     font-size: 12px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .footer-subcontainer {
