enhancement for news and event container

--- a/client/src/pages/NewsPage/NewsPage.css
+++ b/client/src/pages/NewsPage/NewsPage.css
@@ -3,4 +3,12 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin-bottom: 1rem;
+}
+
+.cards-list-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
