--- a/client/src/pages/EventsPage/EventsPage.css
+++ b/client/src/pages/EventsPage/EventsPage.css
@@ -4,3 +4,10 @@
     align-items: center;
     gap: 2rem;
 }
+
+.cards-list-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
