--- a/client/src/pages/HomePage/components/Latest-News/NewsContent.css
+++ b/client/src/pages/HomePage/components/Latest-News/NewsContent.css
@@ -31,6 +31,17 @@
     gap: .5rem;
 }
 
+.content-text {
+    font-size: 14px;
+    line-height: 1.6;
+    text-align: justify;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    /* Set the number of lines to show */
+    -webkit-box-orient: vertical;
+}
+
 .content-button {
     align-self: flex-end;
     margin-bottom: .5rem;
@@ -45,7 +56,7 @@
     background-color: var(--gray40);
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
 
     .content-box {
         flex-direction: row;
@@ -64,4 +75,4 @@
         position: absolute;
         bottom: 8px;
     }
-}
+} */
