--- a/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerForm/VolunteerForm.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerForm/VolunteerForm.css
@@ -28,10 +28,16 @@
 	font-weight: 500;
 }
 
-.volunteer-form-input {
+.volunteer-form-input,
+.volunteer-form-textarea {
 	padding: 6px;
 	border: 1px solid hsl(0, 0%, 0%);
 	background-color: hsl(0, 6%, 90%);
+}
+
+.volunteer-form-textarea {
+	width: 100%;
+	height: 160px;
 }
 
 .volunteer-form-submit {
@@ -57,6 +63,14 @@
 		grid-template-columns: repeat(2, 1fr);
 		column-gap: 40px;
 		padding: 30px 50px;
+	}
+
+	.volunter-form-message-container {
+		grid-column: 1 / 3;
+	}
+
+	.volunter-form-textarea {
+		height: 160px;
 	}
 
 	.volunteer-form-submit {
