--- a/client/src/pages/ContactUsPage/components/ContactUsSection/ContactUsForm/ContactUsForm.css
+++ b/client/src/pages/ContactUsPage/components/ContactUsSection/ContactUsForm/ContactUsForm.css
@@ -18,15 +18,6 @@
 	gap: 5px;
 }
 
-.contact-us-form-label,
-.contact-us-form-input,
-.contact-us-form-select,
-.contact-us-form-option,
-.contact-us-form-textarea,
-.contact-us-form-submit {
-	display: block;
-}
-
 .contact-us-form-input,
 .contact-us-form-select,
 .contact-us-form-textarea,
@@ -53,18 +44,19 @@
 /* the placeholder text in this textarea is centered, i can't find a fix */
 .contact-us-form-textarea {
 	height: 96px;
+	resize: none;
 }
 
 .contact-us-form-submit {
 	justify-self: center; /* override default grid item rule and place in the center */
 	padding: 6px 24px;
-	background-color: hsl(0, 0%, 70%);
+	background-color: var(--gray70);
 	color: hsl(0, 0%, 100%);
 	cursor: pointer;
 }
 
 .contact-us-form-submit:hover {
-	background-color: hsl(0, 0%, 60%);
+	background-color: var(--gray60);
 }
 
 @media screen and (min-width: 700px) {
