--- a/client/src/pages/ContactUsPage/ContactUsPage.css
+++ b/client/src/pages/ContactUsPage/ContactUsPage.css
@@ -1,9 +1,8 @@
 .contact-us-page {
-	margin: 0 20px; /* left and right page padding in Mobile */
+	margin: 0 20px;
 }
 
 @media screen and (min-width: 700px) {
 	.contact-us-page {
-		padding: 0 20px; /* left and right page padding in Desktop (this may be wider?) */
 	}
 }
