--- a/client/src/pages/HomePage/components/Carousel/Carousel.css
+++ b/client/src/pages/HomePage/components/Carousel/Carousel.css
@@ -4,23 +4,23 @@
 
 .slide-title {
 	position: absolute;
-	left: 100px;
-	bottom: 70px;
-	width: 50%;
+	left: 55px;
+	bottom: 50px;
+	width: 60%;
 	color: white;
-	font-size: 40px;
+	font-size: 22px;
 	background-color: rgba(37, 36, 36, 0.517);
 	padding: 10px 20px;
 }
 
 .slide-image-container {
-	width: 1200px;
 	height: 500px;
+	max-width: 1200px;
 }
 
 .slick-list {
 	height: 500px;
-	width: 1200px;
+	max-width: 1200px;
 }
 
 /* arrows */
@@ -63,4 +63,19 @@
 
 .slick-dots li.slick-active button:before {
 	color: white;
+}
+
+@media screen and (min-width: 768px) {
+	.slide-title {
+		left: 100px;
+		bottom: 70px;
+		width: 50%;
+		font-size: 30px;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.slide-title {
+		font-size: 40px;
+	}
 }
