--- a/client/src/pages/HomePage/components/NewsEventsContentBox/NewsEventsContentBox.css
+++ b/client/src/pages/HomePage/components/NewsEventsContentBox/NewsEventsContentBox.css
@@ -5,15 +5,15 @@
 	justify-content: center;
 	background-color: var(--gray80);
 	width: 350px;
-	margin: 0 0 2rem 0;
+	gap: 20px;
 	position: relative;
 }
 
-.image-wrapper {
-	width: 350px;
-	height: 250px;
+.content-box-image-container {
+	width: 300px;
+	height: 180px;
 	overflow: hidden;
-	margin-bottom: 0.5rem;
+	margin-top: 1rem;
 }
 
 .content-img {
@@ -27,14 +27,12 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 70%;
-	gap: 0.5rem;
+	width: 300px;
+	gap: 1rem;
+	margin-bottom: 1rem;
 }
 
 .content-text {
-	font-size: 14px;
-	line-height: 1.6;
-	text-align: justify;
 	overflow: hidden;
 	display: -webkit-box;
 	-webkit-line-clamp: 4;
@@ -44,7 +42,6 @@
 
 .content-button {
 	align-self: flex-end;
-	margin-bottom: 0.5rem;
 	padding: 0.3rem 0.5rem;
 	background-color: var(--gray60);
 	border: 1px solid var(--black);
