--- a/client/src/pages/GetInvolvedPage/components/VolunteerForm/VolunteerForm.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerForm/VolunteerForm.css
@@ -31,7 +31,7 @@
 .volunteer-form-input,
 .volunteer-form-textarea {
 	padding: 6px;
-	border: 1px solid hsl(0, 0%, 0%);
+	border: 1px solid var(--black);
 	background-color: hsl(0, 6%, 90%);
 }
 
@@ -44,17 +44,17 @@
 .volunteer-form-submit {
 	justify-self: center;
 	padding: 4px 24px;
-	border: 1px solid hsl(0, 0%, 0%);
+	border: 1px solid var(--black);
 	background-color: hsl(0, 0%, 70%);
 	color: hsl(0, 0%, 100%);
 	cursor: pointer;
 }
 
 .volunteer-form-submit:hover {
-	background-color: hsl(0, 0%, 60%);
+	background-color: var(--gray60);
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 768px) {
 	.volunteer-form-container {
 		width: 80%;
 		margin: 0 auto;
@@ -84,7 +84,7 @@
 .loading {
 	width: 19px;
 	height: 19px;
-	border: 4px solid #f3f3f3;
+	border: 4px solid hsl(0, 0%, 95%);
 	border-top: 4px solid hsl(0, 0%, 75%);
 	border-radius: 50%;
 	animation: spin 1s linear infinite;
