--- a/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
+++ b/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
@@ -1,4 +1,5 @@
 .visit-us-section {
+	/* placeholder for future adjustment */
 }
 
 .visit-us-section > h2 {
@@ -7,39 +8,58 @@
 
 .visit-us-container {
 	display: grid;
+	/* <Line /> margin-bottom should be fulfilling this container's margin-top rule? */
+	/* margin-top: 30px; */
 	row-gap: 30px;
+	grid-template-areas:
+		"visit-us-address-container"
+		"visit-us-map-container"
+		"visit-us-contacts-container";
 }
 
-.visit-us-details-container {
-	display: grid;
-	align-content: center;
-	gap: 20px;
-}
-
-.visit-us-details-subcontainer {
+.visit-us-address-container,
+.visit-us-contacts-container {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
+	margin-left: 30px;
 }
 
-.visit-us-details-subcontainer > h3 {
-	/* for custom Address and Contacts styling */
+.visit-us-address-container {
+	grid-area: visit-us-address-container;
 }
 
-.visit-us-details-subcontainer > p {
+.visit-us-contacts-container {
+	grid-area: visit-us-contacts-container;
+}
+
+.visit-us-address-container > h3,
+.visit-us-contacts-container > h3 {
+	font-weight: 600;
+}
+
+.visit-us-address-container > p,
+.visit-us-contacts-container > p {
 	display: flex;
 	flex-direction: column;
-	/* may want a gap here */
+	gap: 5px;
 }
 
-.visit-us-details-subcontainer > p > span {
+.visit-us-address-container > p > span,
+.visit-us-contacts-container > p > span {
 	font-size: inherit;
 }
 
 @media screen and (min-width: 768px) {
 	.visit-us-container {
-		width: 90%; /* the map is flush with the right edge but i've changed it deliberately */
-		margin: 0 auto;
 		grid-template-columns: 0.3fr 0.7fr;
+		grid-template-areas:
+			"visit-us-address-container visit-us-map-container"
+			"visit-us-contacts-container visit-us-map-container";
+	}
+
+	.visit-us-address-container,
+	.visit-us-contacts-container {
+		margin-left: 0;
 	}
 }
