various minor adjustments

--- a/client/src/pages/GetInvolvedPage/components/VolunteerForm/VolunteerForm.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerForm/VolunteerForm.css
@@ -1,4 +1,5 @@
 .volunteer-form-container {
+	/* placeholder for future adjustment */
 }
 
 .volunteer-form-container > h3 {
@@ -77,24 +78,5 @@
 	.volunteer-form-submit {
 		grid-column: 1 / 3;
 		justify-self: end;
-	}
-}
-
-/* this could/should be in globals */
-.loading {
-	width: 19px;
-	height: 19px;
-	border: 4px solid hsl(0, 0%, 95%);
-	border-top: 4px solid hsl(0, 0%, 75%);
-	border-radius: 50%;
-	animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
 	}
 }
