--- a/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerSection.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerSection.css
@@ -1,7 +1,9 @@
 .volunteer-section {
+	/* placeholder for future adjustment */
 }
 
 .volunteer-section > h2 {
+	/* placeholder for future adjustment */
 }
 
 .volunteer-image-container {
