added padding to the news and events

--- a/client/src/pages/HomePage/components/HomeCards/HomeCards.css
+++ b/client/src/pages/HomePage/components/HomeCards/HomeCards.css
@@ -5,6 +5,10 @@
 	flex-wrap: wrap;
 }
 
+.card-section-container {
+	margin: 70px 60px 60px 40px;
+}
+
 @media screen and (min-width: 768px) {
 	.cards-list-container {
 		flex-direction: row;
