--- a/client/src/components/Share/ContentBox.css
+++ b/client/src/components/Share/ContentBox.css
@@ -9,20 +9,20 @@
     position: relative;
 }
 
-.image-wrapper {
+.content-box-image-container {
   width: 350px;
   height: 250px;
   overflow: hidden;
   margin-bottom: .5rem;
 }
 
-.content-img {
+.content-box-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.contents{
+.content-box-subcontainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +30,7 @@
     width: 70%;
     gap: .5rem;
 }
-.content-button{
+.content-box-button{
   align-self: flex-end;
   margin-bottom: .5rem;
   padding: .3rem .5rem;
@@ -40,7 +40,7 @@
   cursor: pointer;
 }
 
-.content-button:hover{
+.content-box-button:hover{
   background-color: var(--gray40);
 }
 
@@ -54,14 +54,14 @@
     height: 250px;
     
 }
-.contents{
+.ontent-box-subcontainer{
     margin: 1rem 2rem 2rem 0;
 }
-.content-button{
+.content-box-button{
   position: absolute;
   bottom: 8px;
 }
-.content-title{
+.content-box-title{
   align-self: flex-start;
 }
 }
