change folder name content box

--- a/client/src/components/ContentBox/ContentBox.css
+++ b/client/src/components/ContentBox/ContentBox.css
@@ -54,7 +54,7 @@
     height: 250px;
     
 }
-.ontent-box-subcontainer{
+.content-box-subcontainer{
     margin: 1rem 2rem 2rem 0;
 }
 .content-box-button{
