--- a/client/src/pages/EventsPage/EventsPage.css
+++ b/client/src/pages/EventsPage/EventsPage.css
@@ -1,13 +1,17 @@
-.search-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+.event-page {
+	margin: 0 20px;
 }
 
-.cards-list-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.search-form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+}
+
+.cards-list-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
