--- a/client/src/pages/AboutPage/components/NetworkingSection/NetworkingSection.css
+++ b/client/src/pages/AboutPage/components/NetworkingSection/NetworkingSection.css
@@ -2,7 +2,7 @@
 	margin-bottom: 30px;
 }
 
-.networking-wrapper {
+.networking-container {
 	margin-bottom: 30px;
 	display: flex;
 	flex-direction: column;
