--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -38,11 +38,18 @@ body {
 
 main {
 	max-width: 1200px;
+	margin: 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+	main {
+		margin: 40px 0;
+	}
 }
 
 @media screen and (min-width: 1200px) {
 	main {
-		margin: 0 auto;
+		margin: 40px auto;
 	}
 }
 
