--- a/client/src/pages/HomePage/components/GetInvolved/GetInvolvedSection.css
+++ b/client/src/pages/HomePage/components/GetInvolved/GetInvolvedSection.css
@@ -1,9 +1,8 @@
 .get-involved-container {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	margin: 0 20px;
 	text-align: center;
-	margin-bottom: 2rem;
 }
 
 .get-involved-title {
@@ -11,19 +10,35 @@
 	font-weight: bold;
 }
 
-.get-involved-description-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.get-involved-container p {
 	text-align: center;
-}
-
-.get-involved-description {
-	margin-top: 1rem;
 }
 
 .image-container {
 	display: flex;
 	gap: 1rem;
 	margin-top: 1rem;
+}
+
+.icon-container {
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+	justify-content: center;
+}
+
+.icon-container a {
+	width: 80px;
+	height: 80px;
+}
+
+.get-involved-image-container {
+	width: 80px;
+	height: 80px;
+}
+
+.square-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
