--- a/client/src/pages/HomePage/components/NewsEventsContentBox/NewsEventsContentBox.css
+++ b/client/src/pages/HomePage/components/NewsEventsContentBox/NewsEventsContentBox.css
@@ -49,6 +49,10 @@
 	cursor: pointer;
 }
 
+.card-content a {
+	text-decoration: none;
+}
+
 .content-button:hover {
 	background-color: var(--gray40);
 }
