added desktop media query for get involved section

--- a/client/src/pages/HomePage/components/GetInvolved/GetInvolvedSection.css
+++ b/client/src/pages/HomePage/components/GetInvolved/GetInvolvedSection.css
@@ -42,3 +42,17 @@
 	height: 100%;
 	object-fit: cover;
 }
+
+@media screen and (min-width: 768px) {
+	.get-involved-image-container {
+		width: 150px;
+		height: 110px;
+	}
+	.icon-container {
+		gap: 100px;
+	}
+
+	.get-involved-container h2 {
+		font-size: 30px;
+	}
+}
