got rid of merge conflict
Co-Authored-By: Baz <61154071+bazmurphy@users.noreply.github.com>

--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -1,5 +1,11 @@
-.home-container {
+.home-page {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
+}
+
+@media screen and (min-width: 768px) {
+	.home-page {
+		gap: 60px;
+	}
 }
