--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -39,18 +39,18 @@ header nav ul {
 }
 
 .navigation-link {
-	color: black;
+	color: var(--black);
 	text-decoration: none;
 	font-size: 14px;
 	transition: all ease-in-out 200ms;
 }
 
 .navigation-link:hover {
-	color: white;
+	color: var(--white);
 }
 
 .navigation-link.active {
-	color: white;
+	color: var(--white);
 }
 
 .navigation-link-image-container {
@@ -135,7 +135,7 @@ header nav ul {
 	}
 
 	.navigation-link.active {
-		color: black;
+		color: var(--black);
 	}
 
 	.navigation-link.active + .navigation-link-icon-container {
