--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -4,7 +4,7 @@
 /* Laptop 1024px */
 /* Desktop 1200px */
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 :root {
 	--white: hsl(0, 0%, 100%);
@@ -26,7 +26,7 @@
 	padding: 0;
 	/* uncomment this when developing to see how the box models interact */
 	/* border: 1px dotted black; */
-	font-family: "Roboto", sans-serif;
+	font-family: "Quicksand", sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 }
