--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -29,6 +29,13 @@
 	font-family: "Quicksand", sans-serif;
 	font-size: 16px;
 	font-weight: 400;
+
+	/* font improvements */
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 body {
