change class name and improve css

--- a/client/src/pages/EventsPage/EventsPage.css
+++ b/client/src/pages/EventsPage/EventsPage.css
@@ -6,12 +6,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 	gap: 2rem;
 }
 
 .cards-list-container {
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
+	gap: 2rem;
 }
