--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -5,7 +5,6 @@
 	justify-content: center;
 	width: 350px;
 	margin: 0 0 2rem 0;
-	position: relative;
 	border-radius: 25px;
 	/* just for test for now */
 	border: 1px solid var(--black);
@@ -34,11 +33,13 @@
 }
 
 .card-subcontainer {
+	position: relative;
+	margin-bottom: 1.5rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 70%;
+	width: 75%;
 	gap: 0.5rem;
 }
 
@@ -57,15 +58,16 @@
 
 /* will change this style when we have a good design for it */
 .card-button {
-	align-self: flex-end;
-	margin-bottom: 0.5rem;
-	width: 30px;
-	height: 30px;
-	background-color: var(--gray60);
-	border: 1px solid var(--black);
-	color: var(--white);
-	cursor: pointer;
-	border-radius: 50%;
+	position: absolute;
+    bottom: -5px;
+	right: -15px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--gray60);
+    border: 1px solid var(--black);
+    color: var(--white);
+    cursor: pointer;
+    border-radius: 50%;
 }
 
 .card-button:hover {
