--- a/client/src/pages/ServicesPage/components/Services/Services.css
+++ b/client/src/pages/ServicesPage/components/Services/Services.css
@@ -1,4 +1,4 @@
-.service-card {
+.service-link {
 	text-decoration: none;
 	color: var(--black);
 }
@@ -11,11 +11,12 @@
 	padding: 20px 20px;
 	border: 1px solid var(--black);
 	border-radius: 15px;
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	transition: all 0.2s ease-in-out;
 }
 
 .services-container:hover {
-	box-shadow: none;
+	box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 
 .service-subcontainer {
