--- a/client/src/pages/HomePage/components/HomeCardList/HomeCardList.css
+++ b/client/src/pages/HomePage/components/HomeCardList/HomeCardList.css
@@ -3,11 +3,40 @@
 }
 
 .home-card-list-container {
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 24px;
+	gap: 24px; */
+}
+
+.slick-slider {
+	width: 100%;
+	overflow: hidden;
+}
+.slick-list {
+	position: relative;
+	display: block !important;
+	width: 100%;
+}
+.slick-slide div {
+	width: auto;
+	margin-right: 10px;
+}
+.slick-slide img {
+	width: calc(100% - 10px) !important;
+}
+
+/* For the demo */
+.slick-prev,
+.slick-next {
+	z-index: 999 !important;
+}
+.slick-prev {
+	left: 25px !important;
+}
+.slick-next {
+	right: 25px !important;
 }
 
 @media screen and (min-width: 768px) {
