--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -3,7 +3,8 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 350px;
+	/* width: 280px; */
+	width: 90%;
 	margin: 0 0 2rem 0;
 	border-radius: 25px;
 	/* just for test for now */
@@ -19,7 +20,8 @@
 
 .card-image-container {
 	/* changed this to make border visible */
-	width: 348px;
+	/* width: 278px; */
+	width: 100%;
 	height: 250px;
 	overflow: hidden;
 	margin-bottom: 0.5rem;
@@ -73,3 +75,18 @@
 .card-button:hover {
 	background-color: var(--gray40);
 }
+
+@media screen and (min-width: 768px) {
+	/* .card-container {
+		width: 350px;
+		height: auto;
+	}
+
+	.card-image-container {
+		width: 348px;
+		height: 220px;
+	} */
+
+	
+}
+
