--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -3,13 +3,14 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	/* width: 280px; */
 	width: 90%;
 	margin: 0 0 2rem 0;
 	border-radius: 25px;
 	/* just for test for now */
 	border: 1px solid var(--black);
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	box-shadow:
+		rgba(0, 0, 0, 0.16) 0px 3px 6px,
+		rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	transition: all 0.2s ease-in-out;
 }
 
@@ -19,8 +20,6 @@
 }
 
 .card-image-container {
-	/* changed this to make border visible */
-	/* width: 278px; */
 	width: 100%;
 	height: 250px;
 	overflow: hidden;
@@ -75,18 +74,3 @@
 .card-button:hover {
 	background-color: var(--gray40);
 }
-
-@media screen and (min-width: 768px) {
-	/* .card-container {
-		width: 350px;
-		height: auto;
-	}
-
-	.card-image-container {
-		width: 348px;
-		height: 220px;
-	} */
-
-	
-}
-
