--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -45,18 +45,18 @@ body {
 
 main {
 	max-width: 1200px;
-	margin: 20px 0;
+	margin: 0 0 20px 0;
 }
 
 @media screen and (min-width: 768px) {
 	main {
-		margin: 40px 0;
+		margin: 0 0 40px 0;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	main {
-		margin: 40px auto;
+		margin: 0 0 40px auto;
 	}
 }
 
