--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -8,9 +8,7 @@
 	border-radius: 25px;
 	/* just for test for now */
 	border: 1px solid var(--black);
-	box-shadow:
-		rgba(0, 0, 0, 0.16) 0px 3px 6px,
-		rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	transition: all 0.2s ease-in-out;
 }
 
