--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -3,13 +3,19 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 90%;
+	width: 100%;
 	margin: 0 0 2rem 0;
 	border-radius: 25px;
 	/* just for test for now */
 	border: 1px solid var(--black);
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	transition: all 0.2s ease-in-out;
+}
+
+@media screen and (min-width: 768px) {
+	.card-container {
+		width: 350px;
+	}
 }
 
 .card-container:hover {
