--- a/client/src/pages/ServicePage/ServicePage.css
+++ b/client/src/pages/ServicePage/ServicePage.css
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+	position: relative;
 }
 
 .service-image-container {
@@ -15,6 +16,9 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.go-back-button {
 }
 
 @media screen and (min-width: 480px) {
