--- a/client/src/pages/AboutPage/AboutPage.css
+++ b/client/src/pages/AboutPage/AboutPage.css
@@ -1,3 +1,15 @@
 .about-page {
-	margin: 0 20px;
+	margin: 20px;
+}
+
+@media screen and (min-width: 768px) {
+	.about-page {
+		margin: 40px;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	main {
+		margin: 40px auto;
+	}
 }
