--- a/client/src/pages/NewsPage/NewsPage.css
+++ b/client/src/pages/NewsPage/NewsPage.css
@@ -1,5 +1,17 @@
 .news-page {
-	margin: 0 20px;
+	margin: 20px;
+}
+
+@media screen and (min-width: 768px) {
+	.news-page {
+		margin: 40px;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.news-page {
+		margin: 40px auto;
+	}
 }
 
 .search-form {
