added summary and adjusted some css

--- a/client/src/pages/GalleryAlbumPage/GalleryAlbumPage.css
+++ b/client/src/pages/GalleryAlbumPage/GalleryAlbumPage.css
@@ -1,15 +1,22 @@
 .gallery-album-page {
-	margin: 0 20px;
+	margin: 20px;
 }
 
 .gallery-album-title {
 	text-align: center;
+	margin-bottom: 10px;
+}
+
+.gallery-album-summary {
+	margin: 0 auto;
+	margin-bottom: 20px;
 }
 
 .gallery-album-link-back {
 	display: inline-block;
 	text-decoration: none;
 	color: var(--black);
+	font-weight: 600;
 }
 
 .gallery-album-list {
@@ -20,8 +27,8 @@
 }
 
 .gallery-album-image-container {
-	width: 300px;
-	height: 200px;
+	width: 400px;
+	height: 300px;
 }
 
 .gallery-album-image {
@@ -29,4 +36,27 @@
 	height: 100%;
 	object-fit: cover;
 	border-radius: 20px;
+}
+
+@media screen and (min-width: 768px) {
+	.gallery-album-page {
+		margin: 40px;
+	}
+
+	.gallery-album-summary {
+		/* not sure on this percentage */
+		width: 80%;
+	}
+
+	.gallery-album-image-container {
+		/* this should be a different aspect ratio for tablet/desktop */
+		width: 400px;
+		height: 300px;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.gallery-album-page {
+		margin: 40px auto;
+	}
 }
