--- a/client/src/pages/NotFoundPage/NotFoundPage.css
+++ b/client/src/pages/NotFoundPage/NotFoundPage.css
@@ -1,10 +1,23 @@
 .not-found-page {
-	margin: 0 20px;
+	margin: 20px;
 }
 
 .page-not-found-title {
+	/* placeholder */
 }
 
 .page-not-found-message {
 	text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+	.not-found-page {
+		margin: 40px 20px;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.not-found-page {
+		margin: 40px auto;
+	}
 }
