--- a/client/src/pages/ServicesPage/components/ServiceCard/ServiceCard.css
+++ b/client/src/pages/ServicesPage/components/ServiceCard/ServiceCard.css
@@ -9,7 +9,7 @@
 	margin-bottom: 1rem;
 	/* create temporarily visibility of card */
 	padding: 20px 20px;
-	border: 1px solid var(--gray60);
+	border: 1px solid var(--gray70);
 	border-radius: 15px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	transition: all 0.2s ease-in-out;
@@ -37,6 +37,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	border-radius: 10px;
 }
 
 .service-card-summary {
