--- a/client/src/pages/HomePage/components/HomeEvents/HomeEvents.css
+++ b/client/src/pages/HomePage/components/HomeEvents/HomeEvents.css
@@ -1,15 +1,25 @@
-.home-events-section{
-    background-color: var(--green04);
-    padding: .5rem 0;
+.home-events-section {
+	background-color: var(--green04);
+	padding: 0.5rem 0;
 }
 
-.home-events-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    padding: 1rem 0 1rem 0;
+.home-events-container {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 1rem;
+	padding: 1rem 0 1rem 0;
 }
 
-.home-events-title{
-    color: var(--white);
+@media screen and (min-width: 768px) {
+	.home-events-container {
+		flex-direction: row;
+        margin-bottom: 1rem;
+        gap: 0;
+		padding: 0;
+	}
+}
+
+.home-events-title {
+	color: var(--white);
 }
