--- a/client/src/pages/HomePage/components/HomeEventsSection/components/EventCardRight/EventCardRight.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/components/EventCardRight/EventCardRight.css
@@ -1,13 +1,15 @@
-.event-container {
+.event-container-right {
 	display: flex;
 	flex-direction: column;
 	background-color: var(--green05);
+	text-decoration: none;
 }
 
 @media screen and (min-width: 768px) {
-	.event-container {
-		flex-direction: row;
+	.event-container-right {
+		flex-direction: row-reverse;
 		width: 50%;
+		margin-top: 1rem;
 	}
 }
 
